@@ -78,10 +78,14 @@ func (p *ProspectorLog) getFiles() map[string]os.FileInfo {
 				continue
 			}
 
-			// Stat the file, following any symlinks.
-			fileinfo, err := os.Stat(file)
+			fileinfo, err := os.Lstat(file)
 			if err != nil {
 				logp.Debug("prospector", "stat(%s) failed: %s", file, err)
+				continue
+			}
+			// Check if file is symlink
+			if fileinfo.Mode()&os.ModeSymlink != 0 {
+				logp.Debug("prospector", "File %s skipped as it is a symlink.", file)
 				continue
 			}
 
